// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionList /> should not update while suggestions are fetching 1`] = `
<SuggestionList
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  searchPhrase={null}
  suggestions={
    [
      "foo",
      "foo bar",
      "foo bar buz",
      "foo bar buz quz",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      {
        "onClick": [Function],
        "searchPhrase": null,
        "suggestions": [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ],
      }
    }
  >
    <div
      className="css-1aemm47 theme__search__suggestion-list"
    >
      <SurroundPortals
        key="foo"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo"
          onClick={[Function]}
          type="button"
          value="foo"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo",
              }
            }
          >
            foo
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar"
          onClick={[Function]}
          type="button"
          value="foo bar"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar",
              }
            }
          >
            foo bar
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar buz",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar buz"
          onClick={[Function]}
          type="button"
          value="foo bar buz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar buz",
              }
            }
          >
            foo bar buz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz quz"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar buz quz",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar buz quz"
          onClick={[Function]}
          type="button"
          value="foo bar buz quz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar buz quz",
              }
            }
          >
            foo bar buz quz
          </SurroundPortals>
        </button>
      </SurroundPortals>
    </div>
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 2`] = `
<SuggestionList
  bottomHeight={10}
  fetching={true}
  onClick={[Function]}
  searchPhrase={null}
  suggestions={
    [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      {
        "onClick": [Function],
        "searchPhrase": null,
        "suggestions": [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ],
      }
    }
  >
    <div
      className="css-1aemm47 theme__search__suggestion-list"
    >
      <SurroundPortals
        key="foo"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo"
          onClick={[Function]}
          type="button"
          value="foo"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo",
              }
            }
          >
            foo
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar"
          onClick={[Function]}
          type="button"
          value="foo bar"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar",
              }
            }
          >
            foo bar
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar buz",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar buz"
          onClick={[Function]}
          type="button"
          value="foo bar buz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar buz",
              }
            }
          >
            foo bar buz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz quz"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar buz quz",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar buz quz"
          onClick={[Function]}
          type="button"
          value="foo bar buz quz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar buz quz",
              }
            }
          >
            foo bar buz quz
          </SurroundPortals>
        </button>
      </SurroundPortals>
    </div>
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 3`] = `
<SuggestionList
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  searchPhrase={null}
  suggestions={
    [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      {
        "onClick": [Function],
        "searchPhrase": null,
        "suggestions": [
          "foo bar buz quz",
          "foo bar buz",
          "foo bar",
          "foo",
        ],
      }
    }
  >
    <div
      className="css-1aemm47 theme__search__suggestion-list"
    >
      <SurroundPortals
        key="foo bar buz quz"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar buz quz",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar buz quz"
          onClick={[Function]}
          type="button"
          value="foo bar buz quz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar buz quz",
              }
            }
          >
            foo bar buz quz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar buz",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar buz"
          onClick={[Function]}
          type="button"
          value="foo bar buz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar buz",
              }
            }
          >
            foo bar buz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo bar",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo bar"
          onClick={[Function]}
          type="button"
          value="foo bar"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo bar",
              }
            }
          >
            foo bar
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo"
        portalName="search.suggestion-item"
        portalProps={
          {
            "className": "css-xt0zkn",
            "onClick": [Function],
            "suggestion": "foo",
          }
        }
      >
        <button
          className={
            {
              "data-css-xt0zkn": "",
            }
          }
          data-test-id="searchSuggestion foo"
          onClick={[Function]}
          type="button"
          value="foo"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              {
                "suggestion": "foo",
              }
            }
          >
            foo
          </SurroundPortals>
        </button>
      </SurroundPortals>
    </div>
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should render a list of suggestions 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(SuggestionList)
    bottomHeight={10}
    onClick={[Function]}
  >
    <SuggestionList
      bottomHeight={10}
      dispatch={[Function]}
      fetching={false}
      onClick={[Function]}
      searchPhrase={null}
      suggestions={
        [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ]
      }
    >
      <SurroundPortals
        portalName="search.suggestions"
        portalProps={
          {
            "onClick": [Function],
            "searchPhrase": null,
            "suggestions": [
              "foo",
              "foo bar",
              "foo bar buz",
              "foo bar buz quz",
            ],
          }
        }
      >
        <div
          className="css-1aemm47 theme__search__suggestion-list"
        >
          <SurroundPortals
            key="foo"
            portalName="search.suggestion-item"
            portalProps={
              {
                "className": "css-xt0zkn",
                "onClick": [Function],
                "suggestion": "foo",
              }
            }
          >
            <button
              className={
                {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo"
              onClick={[Function]}
              type="button"
              value="foo"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  {
                    "suggestion": "foo",
                  }
                }
              >
                foo
              </SurroundPortals>
            </button>
          </SurroundPortals>
          <SurroundPortals
            key="foo bar"
            portalName="search.suggestion-item"
            portalProps={
              {
                "className": "css-xt0zkn",
                "onClick": [Function],
                "suggestion": "foo bar",
              }
            }
          >
            <button
              className={
                {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar"
              onClick={[Function]}
              type="button"
              value="foo bar"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  {
                    "suggestion": "foo bar",
                  }
                }
              >
                foo bar
              </SurroundPortals>
            </button>
          </SurroundPortals>
          <SurroundPortals
            key="foo bar buz"
            portalName="search.suggestion-item"
            portalProps={
              {
                "className": "css-xt0zkn",
                "onClick": [Function],
                "suggestion": "foo bar buz",
              }
            }
          >
            <button
              className={
                {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz"
              onClick={[Function]}
              type="button"
              value="foo bar buz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  {
                    "suggestion": "foo bar buz",
                  }
                }
              >
                foo bar buz
              </SurroundPortals>
            </button>
          </SurroundPortals>
          <SurroundPortals
            key="foo bar buz quz"
            portalName="search.suggestion-item"
            portalProps={
              {
                "className": "css-xt0zkn",
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
              }
            }
          >
            <button
              className={
                {
                  "data-css-xt0zkn": "",
                }
              }
              data-test-id="searchSuggestion foo bar buz quz"
              onClick={[Function]}
              type="button"
              value="foo bar buz quz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  {
                    "suggestion": "foo bar buz quz",
                  }
                }
              >
                foo bar buz quz
              </SurroundPortals>
            </button>
          </SurroundPortals>
        </div>
      </SurroundPortals>
    </SuggestionList>
  </Connect(SuggestionList)>
</Provider>
`;
